--- a/src/app.css
+++ b/src/app.css
@@ -71,3 +71,26 @@ input{
 body{
     background: var(--bodyColor);
 }
+
+.secIntro{
+    max-width: 70%;
+    text-align: center;
+    margin: 0 auto 2rem;
+}
+.secIntro .secTitle{
+    color: var(--blackColor);
+    line-height: 1.5rem;
+    padding-bottom: .5rem;
+}
+.secIntro p{
+    font-size: 13px;
+    color: var(--textColor);
+    font-weight: 500;
+}
+img, video{
+    width: 100;
+    height: auto;
+}
+input{
+    font-size: 100%;
+}
