--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -34,7 +34,7 @@
             justify-content: center;
         }
         .icon{
-            color: var(--PrimaryColor);
+            color: var(--whiteColorDeam);
             font-size: 25px;
         }
     }
@@ -111,6 +111,15 @@
         }
         .activeNavbar{
             left: 0;
+        }
+    }
+    .toggleNavbar{
+        .icon{
+            font-size: 25px;
+            color: var(--whiteColor);
+            &:hover{
+                color: var(--PrimaryColor);
+            }
         }
     }
  }
