--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -25,6 +25,11 @@
         z-index: 1000;
     }
 
+    .activeHeader{
+        background: var(--greyColor);
+        box-shadow: 0 2px 8px 2px rgba(178, 178, 178, 0.45);
+    }
+
     .logoDiv{
         .logo{
             color: var(--whiteColor);
@@ -36,6 +41,7 @@
         .icon{
             color: var(--whiteColor);
             font-size: 25px;
+            margin-right: 10px;
         }
     }
     @media screen and (max-width: 768px) {
