--- a/src/Components/Packages/packages.css
+++ b/src/Components/Packages/packages.css
@@ -29,7 +29,43 @@
                     color: var(--textColor);
 
                     .destImage{
-                        
+                        position: relative;
+                        height: 200px;
+                        width: 100%;
+                        border-radius: 1rem;
+                        overflow: hidden;
+
+                        img{
+                            height: 100%;
+                        }
+
+                        .discount{
+                            position: absolute;
+                            top: 10px;
+                            right: 10px;
+                            padding: 5px 10px;
+                            background: var(--PrimaryColor);
+                            color: var(--whiteColor);
+                            border-radius: 3rem;
+                            font-size: 10px;
+                            font-weight: 500;
+                        }
+                    }
+
+                    .packageBody{
+                        padding: 1rem;
+
+                        .price{
+                            justify-content: space-between;
+
+                            
+                            h4{
+                                columns: var(--blackColor);
+                                font-weight: 700;
+                                font-size: 1.1rem;
+                            }
+
+                        }
                     }
                     
                 }
