--- a/src/Components/Blog/blog.css
+++ b/src/Components/Blog/blog.css
@@ -24,7 +24,8 @@
                 height: 200px;
                 width: 100%;
                 border-radius: 1rem;
-                box-shadow: 0 2px 8px 2px rgba(178, 178, 0.406);
+                border: 5px solid var(--greyColor);
+                box-shadow: 0 2px 8px 2px rgba(178, 178, 178, 0.406);
                 overflow: hidden;
 
                 &:hover{
