--- a/src/Components/Blog/blog.css
+++ b/src/Components/Blog/blog.css
@@ -25,7 +25,7 @@
                 width: 100%;
                 border-radius: 1rem;
                 border: 5px solid var(--greyColor);
-                box-shadow: 0 2px 8px 2px rgba(178, 178, 178, 0.406);
+                box-shadow: 0 2px 8px 2px rgba(178, 178, 0.406);
                 overflow: hidden;
 
                 &:hover{
