--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -113,6 +113,24 @@
                 bottom: -100px;
                 width: 90%;
                 grid-template-columns: repeat(2, 1fr);
+                .btn{
+                    transform: translateY(15px);
+                }
+            }
+        }
+    }
+ }
+
+ @media screen and (min-width:556px) {
+    .home{
+        .secContainer{
+            .homeText{
+                .title{
+                    font-size: 2.5rem;
+                }
+                .subTitle{
+                    font-size: 18px;
+                }
             }
         }
     }
