--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -11,7 +11,7 @@
     --inputColor: rgb(239, 239, 239);
     --bodyColor: rgb(240,240,246);
     --cardBG: rgb(225, 225, 225);
- 
+ }
 
  .navBarSection{
     .header{
@@ -130,4 +130,18 @@
     }
  }
 
+@media screen and (min-width: 769px) {
+    .toggleNavbar, .closeNavbar{
+        display: none;
+    }
+
+    .header{
+        padding: 1.5rem 2rem;
+        .navBar{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: row;
+        }
+    }
 }
