--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -131,17 +131,71 @@
  }
 
 @media screen and (min-width: 769px) {
-    .toggleNavbar, .closeNavbar{
-        display: none;
-    }
-
-    .header{
-        padding: 1.5rem 2rem;
-        .navBar{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: row;
+    .navBarSection{
+        .toggleNavbar, .closeNavbar{
+            display: none;
         }
+    
+        .header{
+            padding: 1.5rem 2rem !important;
+            .navBar{
+                .navLists{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    flex-direction: row;
+
+                    .navItem{
+                        .navLink{
+                            color: var(--whiteColor);
+                            padding: 0.45rem;
+                            font-size: .9rem;
+                            font-weight: 400;
+                            &:hover{
+                                color: var(--PrimaryColor);
+                            }
+                        }
+                    }
+
+                    .btn{
+                        margin-left: 1rem;
+
+                        a{
+                            columns: var(--whiteColor);
+                            font-weight: 500;
+                        }
+                    }
+
+                    .loginBtn{
+                        background: none;
+                        border: 1px solid var(--PrimaryColor);
+
+                        &:hover{
+                            background: var(--PrimaryColor);
+                            a{
+                                columns: var(--whiteColor);
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 960px) {
+    .header{
+        .navBar{
+            .navLists{
+                .navItem{
+                    padding: 0.7rem;
+                }
+            }
+        }
+    }
+}
+@media screen and (min-width: 1024px) {
+    .header{
+        padding: 1rem 8.5rem !important;
     }
 }
