--- a/src/app.css
+++ b/src/app.css
@@ -97,7 +97,20 @@ input{
 
 
 @media screen and (min-width: 556px) {
-    .mainContent{
+    .mainContent, .singlePost{
         grid-template-columns: repeat(2,1fr);
+    }
+}
+
+@media screen and (min-width: 884px) {
+    .mainContent{
+        grid-template-columns: repeat(3,1fr);
+    }
+}
+
+@media screen and (min-width: 884px) {
+    .container{
+        width: 75% !important;
+        margin: auto !important;
     }
 }
