--- a/src/Components/Blog/blog.css
+++ b/src/Components/Blog/blog.css
@@ -71,3 +71,11 @@
             }
         }
     }
+
+    @media screen and (min-width: 884px) {
+        .blog{
+            .mainContainer{
+                grid-template-columns: repeat(2,1fr);
+            }
+        }
+    }
