--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -11,7 +11,6 @@
     --bodyColor: rgb(240,240,246);
     --cardBG: rgb(225, 225, 225);
  }
- 
 
  .footer{
     background: var(--greyColor);
@@ -79,5 +78,29 @@
                 font-weight: 500;
             }
         }
+    }
+ }
+
+ @media screen and (min-width: 448px) {
+    .secContainer{
+        grid-template-columns: repeat(2,1fr);
+        text-align: center;
+        align-items: flex-start;
+
+        .footerLinks{
+            justify-content: center;
+        }
+    }
+ }
+
+ @media screen and (min-width: 640px) {
+    .secContainer{
+        grid-template-columns: 4,1fr;
+    }
+ }
+
+ @media screen and (min-width: 640px) {
+    .secContainer{
+        padding: 2rem;
     }
  }
