--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -168,3 +168,18 @@
  }
  
 
+@media screen and (min-width: 1024px) {
+    .home{
+        .secContainer{
+            .homeText{
+                .subTitle{
+                    font-size: 20px;
+                }
+            }
+
+            .homeCard{
+                width: 70%;
+            }
+        }
+    }
+}
