--- a/src/Components/Popular/popular.css
+++ b/src/Components/Popular/popular.css
@@ -63,6 +63,66 @@
         .mainContent{
             padding: 2rem 0;
             gap: 1rem;
+
+            .singleDestination{
+                overflow: hidden;
+                border-radius: 1rem;
+                box-shadow: 0 2px 8px 2px rgba(178,178,178,0.334);
+
+                .destImage{
+                    height: 200px;
+                    width: 100%;
+                    position: relative;
+                    overflow: hidden;
+                    img{
+                        height: 100%;
+                        width: 100%;
+                        object-fit: cover;
+                    }
+
+                    .overlayInfo{
+                        position: absolute;
+                        display: flex;
+                        align-items: flex-start;
+                        padding: 1rem 1.5rem;
+                        justify-content: center;
+                        flex-direction: column;
+                        background: linear-gradient(rgba(0, 0, 0, 0.846), rgba(0, 0, 0, 0.759));
+                        bottom: 0;
+                        width: 100%;
+                        height: 100%;
+                        overflow: hidden;
+
+                        h3{
+                            color: var(--whiteColor);
+                            font-weight: 600;
+                        }
+                        p{
+                            color: var(--whiteColor);
+                            opacity: .7;
+                            font-size: 13px;
+                        }
+                        .icon{
+                           position: absolute;
+                           right: 10px;
+                           bottom: 10px;
+                           padding: .5rem;
+                           background: var(--PrimaryColor); 
+                           font-size: 2.5rem;
+                           border-radius: 50%;
+                           columns: var(--whiteColor);
+                           border: 1px solid transparent;
+                           transition: .3s ease;
+
+                           &:hover{
+                            background: var(--blackColor);
+                            border: 1px solid var(--PrimaryColor);
+                            color: var(--PrimaryColor);
+                           }
+                        }
+                    }
+                }
+            }
         }
     }
  }
