--- a/src/Components/Popular/popular.css
+++ b/src/Components/Popular/popular.css
@@ -122,7 +122,114 @@
                         }
                     }
                 }
+
+                .destFooter{
+                    padding: 1rem;
+
+                    .number{
+                        font-size: 2rem;
+                        font-weight: 700;
+                        color: var(--blackColor);
+                        position: relative;
+                        width: max-content;
+                        &::after{
+                            content: '';
+                            background: var(--PrimaryColor);
+                            top: 45%;
+                            right: -150%;
+                            height: 5px;
+                            width: 45px;
+                            border-radius: 1rem;
+                        }
+                    }
+
+                    .destText{
+                        justify-content: space-between;
+
+                        h6{
+                            color: var(--blackColor);
+                            font-size: 15px;
+                        }
+                        .flex{
+                            font-size: 16px;
+                            font-weight: 600;
+                            align-items: flex-start;
+                            transform: translateY(5px);
+
+                            .icon{
+                                color: var(--PrimaryColor);
+                            }
+                        }
+                    }
+                }
+
+                &:hover{
+                    .overlayInfo{
+                        overflow: visible;
+                        padding: 1rem 1.5rem;
+                        height: 100%;
+                    }
+                }
             }
         }
+    }
+ }
+
+ @media screen and (min-width:480px) {
+    .popular{
+        padding-top: 10rem;
+    }
+ }
+
+ 
+ @media screen and (min-width:556px) {
+    .popular{
+        .secContainer{
+            .secHeader{
+                width: 100%;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+
+                .textDiv{
+                    text-align: start;
+                    max-width: 70%;
+                }
+
+                .iconsDiv{
+                    justify-content: flex-end;
+                }
+            }
+        }
+    }
+ }
+
+ @media screen and (min-width:720px) {
+    .popular{
+       padding-top: 7rem;
+    }
+ }
+
+ @media screen and (min-width:720px) {
+    .popular{
+       padding-top: 10rem;
+
+       .secContainer{
+        .secHeader{
+            .textDiv{
+                .secTitle{
+                    font-size: 2.2rem;
+                }
+                p{
+                    font-size: 15px;
+                }
+            }
+        }
+        
+        .mainContent{
+            grid-template-columns: repeat(4,1fr);
+            gap: 1.5rem !important;
+        }
+       }
     }
  }
