--- a/src/Components/Popular/popular.css
+++ b/src/Components/Popular/popular.css
@@ -124,13 +124,13 @@
                 }
 
                 .destFooter{
-                    padding: 1rem;
+                    padding: .1rem;
 
                     .number{
-                        font-size: 2rem;
+                        font-size: 1.3rem;
                         font-weight: 700;
                         color: var(--blackColor);
-                        position: relative;
+                        position: inherit;
                         width: max-content;
                         &::after{
                             content: '';
@@ -146,7 +146,7 @@
                     .destText{
                         justify-content: space-between;
 
-                        h6{
+                        h2{
                             color: var(--blackColor);
                             font-size: 15px;
                         }
