--- a/src/app.css
+++ b/src/app.css
@@ -64,7 +64,7 @@ li{
 }
 img, video{
     width: 100%;
-    height: auto;
+    height: 230px;
 }
 input{
     font-size: 100%;
@@ -90,7 +90,7 @@ body{
 }
 img, video{
     width: 100;
-    height: auto;
+    height: 230px;
 }
 input{
     font-size: 100%;
